--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,11 @@ main{
     height: auto;
     background: #d26ded;
 }
+
+/*==  CONTENEDOR GRID N° 01 ==*/
+
+.grid-01{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: 80px 200px;
+}
