--- a/styles.css
+++ b/styles.css
@@ -24,4 +24,11 @@ main{
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-template-rows: 80px 200px;
+    padding: 10px;
+    column-gap: 10px;
+    row-gap: 10px;
+}
+
+.grid-01>div{
+    background: #76D7C4;
 }
