--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,14 @@ main{
 .grid-01>div{
     background: #76D7C4;
 }
+
+/*==  MEDIA QUERIES: TABLETS ==*/
+
+@media screen and  (max-width:768px){
+
+    .grid-01{
+        grid-template-columns: auto auto;
+        grid-template-rows: repeat(4, 80px);
+    }
+    
+}
