--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,10 @@ main{
         grid-template-columns: auto auto;
         grid-template-rows: repeat(4, 80px);
     }
+
+    .grid-02{
+        grid-template-columns: 50% 50%;
+    }
     
 }
 
@@ -72,5 +76,8 @@ main{
         grid-template-rows: repeat(8, 80px);
     }
     
+    .grid-02{
+        grid-template-columns: 1fr;
+    }
 }
 
